fix skipping blocks in UI